objects/kugo2p__Favorite__c.object
<CustomObject>
    <description>Kugamon - Main Object to Store Favorite Information. Record Owner is the Favorite User. Favorite Name is the Name of the Underlying Favorite, such as Account Name, Product Name, Group Name.</description>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__OwnerName__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <label>Favorite</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Description__c</columns>
        <columns>kugo2p__IsGroup__c</columns>
        <columns>kugo2p__OwnerName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Favorite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>